--- a/src/components/screens/ProductPage/css/style.css
+++ b/src/components/screens/ProductPage/css/style.css
@@ -6,7 +6,7 @@
   width: 100%;
   background-repeat: no-repeat;
   background-position: bottom;
-  background-size: cover;
+  background-size: contain;
   display: flex;
   justify-content: center;
   align-items: center;
