--- a/src/components/screens/VisitorsScreen/css/style.css
+++ b/src/components/screens/VisitorsScreen/css/style.css
@@ -105,7 +105,7 @@
 }
 #visitorsScreen .visitors-link-btn {
   width: 100%;
-  min-height: 64px; 
+  min-height: 64px;
   /* Monaly primary */
 
   box-sizing: border-box;
@@ -160,8 +160,8 @@
   border-radius: 16px;
   font-family: Poppins;
   font-style: normal;
-  font-weight: normal;
-  font-size: 12px;
+  font-weight: bold;
+  font-size: 16px;
   line-height: 34px;
   /* identical to box height, or 283% */
 
