--- a/src/components/screens/ProductPage/css/style.css
+++ b/src/components/screens/ProductPage/css/style.css
@@ -5,7 +5,7 @@
   height: 600px;
   width: 100%;
   background-repeat: no-repeat;
-  background-position: bottom;
+  background-position: center;
   background-size: contain;
   display: flex;
   justify-content: center;
