--- a/src/components/screens/Admin/css/style.css
+++ b/src/components/screens/Admin/css/style.css
@@ -189,15 +189,31 @@
   width: 80%;
   margin: 200px auto;
 }
+.users-list .avatar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  position: static;
+  width: 40px;
+  height: 40px;
+  max-width: 40px;
+  max-height: 40px;
+  min-width: 40px;
+  min-height: 40px;
+  border-radius: 50%;
+}
 .users-list-item {
   width: 100%;
-  height: 64px;
+  height: 50px;
   background: #f1f1f1;
   border-radius: 4px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 16px 32px;
+  padding: 8px 32px;
   margin: 10px 0;
   /* Desktop / Text X-Small */
 
@@ -244,7 +260,7 @@
 
   color: #ef476f;
 }
-.users-list-item .account-type{
+.users-list-item .account-type {
   display: flex;
   align-items: center;
 }
