--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,41 @@ a {
   text-decoration: none !important;
 }
 
+.loader-line {
+  background-color: #ffffff;
+  overflow: hidden;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: flex-start;
+  z-index: 100000;
+}
+
+.loader__element {
+  height: 3px;
+  width: 100%;
+  background: #a5d6a7;
+}
+
+.loader__element:before {
+  content: "";
+  display: block;
+  background-color: #4caf50;
+  height: 3px;
+  width: 0;
+  animation: getWidth 3s ease-in infinite;
+}
+
+@keyframes getWidth {
+  100% {
+    width: 100%;
+  }
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
