--- a/src/components/screens/ProductsPage/css/style.css
+++ b/src/components/screens/ProductsPage/css/style.css
@@ -10,7 +10,7 @@
   position: relative;
   background-repeat: no-repeat;
   background-position: center;
-  background-size: contain;
+  background-size: cover;
   display: flex;
   justify-content: center;
   align-items: center;
