Checkout page ready

--- a/src/components/screens/DashBoard/css/style.css
+++ b/src/components/screens/DashBoard/css/style.css
@@ -1167,12 +1167,13 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 90px;
     background: #ffffff;
     z-index: 2;
     display: flex;
     justify-content: space-around;
+
     align-items: center;
+    padding: 8px;
   }
   .mobile-bottom-nav-item {
     display: flex;
