--- a/src/components/includes/AddLinkBox/css/style.css
+++ b/src/components/includes/AddLinkBox/css/style.css
@@ -1,3 +1,5 @@
+/** @format */
+
 .add-link-box {
   min-height: 122px;
   width: 100%;
@@ -56,7 +58,6 @@
   height: 24px;
   margin-top: 0.25em;
   background-color: #fff;
-  /* border: 1px solid #ef476f; */
 }
 .form-check-input:checked {
   background-color: #ef476f;
@@ -83,32 +84,6 @@
     flex: 1 0 80%;
   }
   .add-link-box .inputs-and-media .text-icon {
-    display: flex;
-    /* justify-content: space-between; */
     width: 100%;
-  }
-  .add-link-box .inputs-and-media .text-icon input {
-    border: none;
-    outline: none;
-    /* width: 100%; */
-  }
-
-  .form-check-input {
-    width: 42.67px;
-    height: 24px;
-    margin-top: 0.25em;
-    background-color: #fff;
-    /* border: 1px solid #ef476f; */
-  }
-  .form-check-input:checked {
-    background-color: #ef476f;
-    border-color: #ef476f;
-  }
-  .form-switch .form-check-input {
-    width: 42.67px;
-    margin-left: -2.5em;
-    background-position: left center;
-    border-radius: 2em;
-    transition: background-position 0.15s ease-in-out;
   }
 }
