--- a/src/components/includes/SmartPhone/css/style.css
+++ b/src/components/includes/SmartPhone/css/style.css
@@ -1,4 +1,9 @@
-/* The device with borders */
+/**
+ * /* The device with borders
+ *
+ * @format
+ */
+
 .smartphone {
   position: relative;
   width: 270px;
@@ -12,6 +17,27 @@
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+
+  background-blend-mode: darken;
+  position: relative;
+  /* background-image: linear-gradient(rgba(0,0,0,0.527),rgba(0,0,0,0.5), url()); */
+}
+.smartphone .bg-image {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  /* background: beige; */
+  /* z-index: -1; */
+  background-position: center;
+  background-size: cover !important;
+  background-repeat: no-repeat;
+  /* background-blend-mode: overlay; */
+}
+.smartphone.smartphone-blured {
+  background-color: rgba(0, 0, 0, 0.3);
+  /* background-blend-mode: darken; */
 }
 
 /* The horizontal line on the top of the device */
@@ -61,6 +87,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
 }
 /* Hide scrollbar for Chrome, Safari and Opera */
 .smartphone .content::-webkit-scrollbar {
