--- a/src/components/screens/DashBoard/css/style.css
+++ b/src/components/screens/DashBoard/css/style.css
@@ -254,6 +254,21 @@
   /* text-align: center; */
   margin-bottom: 60px;
   min-height: 100px;
+  overflow: hidden;
+}
+#appearance .appearance-box-inactive {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background-color: rgba(180, 153, 153, 0.74);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 3;
 }
 #appearance h2 {
   font-family: Poppins;
@@ -309,6 +324,9 @@
   /* Grayscale / Off-white */
 
   color: #fcfcfc;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 #appearance .image-btns {
   width: 300px;
@@ -441,6 +459,7 @@
   text-align: center;
   margin-bottom: 15px;
   cursor: pointer;
+  position: relative;
 }
 #appearance .style-item .input-container {
   position: relative;
@@ -466,11 +485,13 @@
   color: #000000;
 }
 #appearance .style-item input {
-  position: absolute;
+  /* position: absolute; */
   opacity: 0;
   cursor: pointer;
   /* height: 0; */
   /* width: 0; */
+  /* left: 10px; */
+  /* margin-left: 10px; */
 }
 #appearance .style-item .checkmark {
   height: 16px;
@@ -497,6 +518,49 @@
   border: 5px solid #6e7191;
   box-sizing: border-box;
   border-radius: 24px;
+  position: relative;
+  overflow: hidden;
+}
+#appearance .style-item .actions-box {
+  position: absolute;
+  bottom: 14px;
+  width: 95%;
+  height: 40px;
+  background-color: rgba(59, 50, 50, 0.493);
+  border-radius: 30px;
+  left: 50%;
+  z-index: 2;
+  cursor: default;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  transform: translateX(-50%);
+}
+#appearance .style-item .phone .bg-image {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  /* background: beige; */
+  /* z-index: -1; */
+  background-position: center;
+  background-size: cover !important;
+  background-repeat: no-repeat;
+  /* background-blend-mode: overlay; */
+}
+
+.add-custom-theme-select {
+  width: 150px;
+  height: 272.89px;
+  border: 3px dashed #d6d8e7;
+  box-sizing: border-box;
+  border-radius: 24px;
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 #appearance .style-item .phone .phone-stack {
   /* opacity: 0.2; */
@@ -508,16 +572,19 @@
   background: #6e7191;
   border-radius: 4px;
   margin-bottom: 8px;
+  position: relative;
 }
 #appearance .style-item .phone.phone-grids {
   opacity: 0.2;
   padding: 0;
   padding-top: 60px;
+  position: relative;
 }
 #appearance .style-item .phone.phone-mixed {
   opacity: 0.2;
   padding: 0 10px;
   padding-top: 60px;
+  position: relative;
 }
 #appearance .style-item .phone .phone-grid {
   width: 50.6px;
@@ -528,6 +595,7 @@
   border-radius: 4px;
   margin: 4px;
   display: inline-block;
+  position: relative;
 }
 #appearance .style-item input:checked ~ .phone {
   opacity: 1;
@@ -539,6 +607,11 @@
   background-position: center;
   border: solid 1px;
   background-size: cover;
+  background-blend-mode: darken;
+}
+.theme-item-one.smartphone-blured {
+  background-color: rgba(0, 0, 0, 0.3);
+  /* background-blend-mode: darken; */
 }
 #links {
   padding-bottom: 50vh;
@@ -828,6 +901,7 @@
     border-radius: 80px;
     margin-left: 24px;
     overflow: hidden;
+    background-size: cover;
   }
   .share-button-mobile {
     height: 40px;
@@ -961,9 +1035,10 @@
 
     letter-spacing: 0.25px;
 
-    /* Grayscale / Off-white */
-
     color: #fcfcfc;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
   }
   #appearance .house-avatar {
     padding: 0;
@@ -1099,7 +1174,8 @@
     padding: 0;
   }
   #appearance .style-item {
-    height: auto;
+    /* height: auto; */
+    height: 267px;
     margin-bottom: 16px;
   }
   #appearance .style-item .phone {
@@ -1107,6 +1183,12 @@
     width: 120px;
     padding-right: 8px;
     padding-left: 8px;
+  }
+  .add-custom-theme-select {
+    height: 229.22891235351562px;
+    width: 120px;
+
+    margin-top: 30px;
   }
   #appearance .style-item .phone .phone-stack {
     height: 18.21686553955078px;
@@ -1400,12 +1482,30 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #ffffff;
+  /* background-color: #ffffff; */
   z-index: 5;
   text-align: center;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  background-blend-mode: darken;
+}
+.mobile-offcanvas .bg-image {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  /* background: beige; */
+  /* z-index: -1; */
+  background-position: center;
+  background-size: cover !important;
+  background-repeat: no-repeat;
+  /* background-blend-mode: overlay; */
+}
+.mobile-offcanvas.smartphone-blured {
+  background-color: rgba(0, 0, 0, 0.3);
+  /* background-blend-mode: darken; */
 }
 .close-mobile-offcanvas {
   position: absolute;
