--- a/src/components/screens/VisitorsScreen/css/style.css
+++ b/src/components/screens/VisitorsScreen/css/style.css
@@ -1,7 +1,7 @@
 /**
  * /* The device with borders
  *
- * @format
+ * @format 
  */
 
 #visitorsScreen {
@@ -15,6 +15,24 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  background-blend-mode: darken;
+}
+#visitorsScreen .bg-image {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  /* background: beige; */
+  z-index: -1;
+  background-position: center;
+  background-size: cover !important;
+  background-repeat: no-repeat;
+  /* background-blend-mode: overlay; */
+}
+#visitorsScreen.smartphone-blured {
+  background-color: rgba(0, 0, 0, 0.3);
+  /* background-blend-mode: darken; */
 }
 
 /* The screen (or content) of the device */
