--- a/src/components/includes/SmartPhone/css/style.css
+++ b/src/components/includes/SmartPhone/css/style.css
@@ -184,6 +184,9 @@
   top: 50%;
   border-radius: 4px;
   overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .custom-link-btn span {
   width: 60%;
