--- a/src/components/includes/Analytics/css/style.css
+++ b/src/components/includes/Analytics/css/style.css
@@ -1,3 +1,13 @@
+/** @format */
+.small-select {
+  background: transparent;
+  width: 110px;
+  height: 38px;
+  border: 1px solid #b3b3b3;
+  box-sizing: border-box;
+  border-radius: 10px;
+}
+
 .page-link {
   /* Desktop / Link X-Small */
 
@@ -35,4 +45,93 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+.analytics-metrics {
+  /* display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 32px 0;
+  flex-wrap: wrap; */
+}
+.analytics-metrics-item {
+  height: 140px;
+  width: 200px;
+  border-radius: 16px;
+  background: #ffffff;
+  /* margin: 0 10px; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 10px;
+  margin: 10px;
+}
+
+@media screen and (max-width: 900px) {
+  .analytics-metrics {
+    /* margin: 16px 0; */
+    /* justify-content: flex-start; */
+  }
+  .analytics-metrics-item {
+    height: auto;
+    width: 130px;
+    margin: 8px;
+  }
+  .analytics-metrics-item p {
+    font-size: 10px;
+    margin: 0 !important;
+    line-height: 16px;
+  }
+}
+.remove-margin .row {
+  --bs-gutter-x: 0rem;
+  --bs-gutter-y: 0;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 0;
+  margin-right: 0;
+  margin-left: 0;
+}
+
+.analytics-metrics-overflow {
+  height: 453px;
+  overflow-y: scroll;
+  width: 100%;
+}
+.analytics-metrics-overflow::-webkit-scrollbar {
+  width: 8px;
+}
+.analytics-metrics-overflow::-webkit-scrollbar-track {
+  /* box-shadow: inset 0 0 5px grey; */
+  border-radius: 10px;
+}
+.analytics-metrics-overflow::-webkit-scrollbar-thumb {
+  background: #b3b3b3;
+  border-radius: 10px;
+}
+.analytics-metrics-overflow::-webkit-scrollbar-thumb:hover {
+  background: #b3b3b3;
+}
+.country-city-button {
+  padding: 5px 10px;
+  background: rgba(252, 55, 102, 0.1);
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+.country-city-button.selected {
+  background: rgba(252, 55, 102, 0.77);
+  color: white;
+}
+@media screen and (max-width: 900px) {
+  .analytics-metrics-overflow {
+    height: auto;
+    overflow-y: scroll;
+    width: 100%;
+  }
+  .analytics-metrics-overflow::-webkit-scrollbar {
+    width: unset;
+  }
 }
