--- a/src/components/includes/SmartPhoneContent/css/style.css
+++ b/src/components/includes/SmartPhoneContent/css/style.css
@@ -1,3 +1,5 @@
+/** @format */
+
 #phone-content {
   position: relative;
   height: 100%;
@@ -107,7 +109,7 @@
   position: relative;
 }
 #phone-content .custom-link-btn .image {
-  width: 35px;
+  width: 45px;
   height: 80%;
   background-color: transparent;
   position: absolute;
@@ -116,6 +118,9 @@
   top: 50%;
   border-radius: 4px;
   overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 #phone-content .custom-link-btn span {
   width: 60%;
